--- a/Java_007_Application/.project
+++ b/Java_007_Application/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Java_007_Applicatiom</name>
+	<name>Java_007_Application</name>
 	<comment></comment>
 	<projects>
 	</projects>
