--- a/Java_008_Application/.project
+++ b/Java_008_Application/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Java_008_Applicatiom</name>
+	<name>Java_008_Application</name>
 	<comment></comment>
 	<projects>
 	</projects>
