--- a/Java_015_Applications/.classpath
+++ b/Java_015_Applications/.classpath
@@ -7,6 +7,11 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="C:/bizworks/javaworks/myJDK/InputService.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
